--- a/task2/index.html
+++ b/task2/index.html
@@ -4,68 +4,8 @@
     <meta charset="utf-8">
     <title>Make This Responsive</title>
 
-    <style type="text/css">
-      * {
-        box-sizing: border-box;
-      }
-
-      h1 {
-        font-size: 3.5em;
-      }
-
-      .wrapper {
-        width: 800px;
-        margin: 20px auto;
-      }
-
-      .listing {
-        overflow: hidden;
-        margin: 0 0 25px 0;
-      }
-
-      .story {
-        float: left;
-        width: 250px;
-        margin-right: 25px;
-        position: relative;
-        font-size: 80%;
-      }
-
-      .story img {
-        display: block;
-      }
-
-      .story__intro {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background: rgba(0, 0, 0, 0.75);
-        padding: 20px;
-        color: white;
-      }
-
-      .story__intro h2 {
-        margin: 0 0 10px 0;
-      }
-
-      .story__intro p {
-        margin: 0;
-      }
-
-      .story--main {
-        position: relative;
-        margin: 0 0 25px 0;
-        width: 100%;
-      }
-      .story--main .story__intro h2 {
-        font-size: 2.5em;
-      }
-
-      .story--last {
-        margin-right: 0;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
   </head>
 
   <body>
