--- a/task2/index.html
+++ b/task2/index.html
@@ -27,7 +27,7 @@
         <article class="story">
           <img src="http://placehold.it/250x350" alt="Placeholder Image" />
           <div class="story__intro">
-            <h2>Less Important Story</h2>
+            <h2>Less Important Story 1</h2>
             <p>This story has less visual weight.</p>
           </div>
         </article>
@@ -35,7 +35,7 @@
         <article class="story">
           <img src="http://placehold.it/250x350" alt="Placeholder Image" />
           <div class="story__intro">
-            <h2>Less Important Story</h2>
+            <h2>Less Important Story 2</h2>
             <p>This story has less visual weight.</p>
           </div>
         </article>
@@ -43,7 +43,7 @@
         <article class="story story--last">
           <img src="http://placehold.it/250x350" alt="Placeholder Image" />
           <div class="story__intro">
-            <h2>Less Important Story</h2>
+            <h2>Less Important Story 3</h2>
             <p>This story has less visual weight.</p>
           </div>
         </article>
