finished tasks to working state
json file 03 in task 03 seems to crash computer

--- a/task1/index.html
+++ b/task1/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Style The Button</title>
       <link rel="stylesheet" type="text/css" href="style.css">
+      <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   </head>
 
   <body>
     <a href="#" class="btn">Bozboz</a>
+      
   </body>
 </html>
